@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
'skinparam linetype ortho
left to right direction
'skinparam classAttributeIconSize 0
hide circle
hide methods
'---------File styling---------
skinparam class {
    BackgroundColor PeachPuff
    ArrowColor RoyalBlue
    BorderColor RoyalBlue
}
'------------|Actors|----------------
class Person {
    - name
    - citizenCardNumber
    - taxNumber
    - email
    - phoneNumber
    - password
}
class Client{

}
class Order{
    - requestPrice
}
class Property{
    - type
    - area 
    - distanceFromCityCenter
    - photoURL

}
class Home {
    - numberOfbedrooms
    - numberOfbathrooms
    - numberOfParkingSpace
    - availableEquipment
}
class Land{

}
class Apartment{

}
class House{
    - basement
    - inhabitableLoft
    - sunExposure
}
class Announcement{
    - state   
}
class Deal{
    - dealType
}
class Sale{
    - propertyPrice
}
class Rent{
    - propertyRent
    - contractDuration
}
class Address{
    -street 
    -city 
    -state 
    -zipcode
}

class Employee {
    - agencyDesignation
}
class Agent{

}
class Date{
    - int year
    - int month
    - int day
}
'-------------------connections------------------

'Person
Person "1" -- "1" Client : can be >

'Order 
Order "1" -- "1" Announcement : has a >
Order "1" *-- "1" Date : has a >

'Client
Client "1" -- "*" Order : makes >
Client "1" -- "*" Visit : makes >
Visit "1" -- "1" Date : has a >
Visit "1" -- "1" Announcement : has a >
Agent "1" -- "*" Visit : confirms >

'Announcement
Announcement "1" -- "1" Property : has a >
Announcement "1" -- "1" Agent : has an >
Announcement "1" *-- "1" Date : has a >

'Property   
Property *--  Address : has >
Property "1" *-- "1" Deal : has >

'Agent

Person --* Employee : has <
Employee "1" -- "1" Agent : can be >
'--------------------heritage--------------------

'Deal
Deal "1"<-- "0..1" Sale 
Deal "1"<-- "0..1" Rent
'Property
.Property <|-- .Land : is a 
.Property <|-- .Home : is a
.Home <|-- .Apartment : is a
.Home <|-- .House : is a

@enduml